feat(methods): done
