# src/api/yolo/yolo.typing.ts
@@ -1,0 +1,5 @@
+export interface IYolo {}
+
+export interface IYoloDoc extends IYolo {
+  _id: string;
+}
