# swagger.json
@@ -6,7 +6,7 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"IJambonoDoc": {
+			"IYoloDoc": {
 				"properties": {
 					"_id": {
 						"type": "string"
@@ -18,12 +18,12 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"IJambono": {
+			"IYolo": {
 				"properties": {},
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Partial_IJambono_": {
+			"Partial_IYolo_": {
 				"properties": {},
 				"type": "object",
 				"description": "Make all properties in T optional"
@@ -46,7 +46,7 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/jambono": {
+		"/yolos": {
 			"get": {
 				"operationId": "ReadAll",
 				"responses": {
@@ -56,7 +56,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/IJambonoDoc"
+										"$ref": "#/components/schemas/IYoloDoc"
 									},
 									"type": "array"
 								},
@@ -70,7 +70,7 @@
 					}
 				},
 				"tags": [
-					"Jambono"
+					"Yolos"
 				],
 				"security": [],
 				"parameters": []
@@ -83,7 +83,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/IJambonoDoc"
+									"$ref": "#/components/schemas/IYoloDoc"
 								},
 								"examples": {
 									"Example 1": {
@@ -97,7 +97,7 @@
 					}
 				},
 				"tags": [
-					"Jambono"
+					"Yolos"
 				],
 				"security": [],
 				"parameters": [],
@@ -106,14 +106,14 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IJambono"
+								"$ref": "#/components/schemas/IYolo"
 							}
 						}
 					}
 				}
 			}
 		},
-		"/jambono/{_id}": {
+		"/yolos/{_id}": {
 			"get": {
 				"operationId": "Read",
 				"responses": {
@@ -122,7 +122,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/IJambonoDoc"
+									"$ref": "#/components/schemas/IYoloDoc"
 								},
 								"examples": {
 									"Example 1": {
@@ -136,7 +136,7 @@
 					}
 				},
 				"tags": [
-					"Jambono"
+					"Yolos"
 				],
 				"security": [],
 				"parameters": [
@@ -149,10 +149,8 @@
 						}
 					}
 				]
-			}
-		},
-		"/jambono/update/{_id}": {
-			"post": {
+			},
+			"patch": {
 				"operationId": "Update",
 				"responses": {
 					"200": {
@@ -160,7 +158,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/IJambonoDoc"
+									"$ref": "#/components/schemas/IYoloDoc"
 								},
 								"examples": {
 									"Example 1": {
@@ -174,7 +172,7 @@
 					}
 				},
 				"tags": [
-					"Jambono"
+					"Yolos"
 				],
 				"security": [],
 				"parameters": [
@@ -192,14 +190,12 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Partial_IJambono_"
+								"$ref": "#/components/schemas/Partial_IYolo_"
 							}
 						}
 					}
 				}
-			}
-		},
-		"/jambono/delete/{_id}": {
+			},
 			"delete": {
 				"operationId": "Delete",
 				"responses": {
@@ -208,7 +204,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/IJambonoDoc"
+									"$ref": "#/components/schemas/IYoloDoc"
 								},
 								"examples": {
 									"Example 1": {
@@ -222,7 +218,7 @@
 					}
 				},
 				"tags": [
-					"Jambono"
+					"Yolos"
 				],
 				"security": [],
 				"parameters": [
